fixx alignment

--- a/static/style.css
+++ b/static/style.css
@@ -82,7 +82,7 @@ background-color: rgba(22, 22, 22, 0.11);
 
 table th,
 table td {
-    color: rgb(168, 168, 168) !important;;
+    color: rgb(168, 168, 168) !important;
   padding-right: 36px;
   padding-left: 36px;
   white-space: nowrap;
